Bokmålifisering av Roller i gruppen

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -158,26 +158,23 @@ forbindelse med språkvalg på prosessrapporten. Knut var i utgangspunktet uvill
 til å skrive på norsk, og det gikk ikke å ``vinne'' han over. Etter noen
 minutter med diskusjon ble altså Knut Halvor overstyrt.
 
-\subsection{Roller i gruppa}
-``Ein person blir ein leder når han eller hun blir satt i ein lederposisjon.'' \\
+\section{Roller i gruppen}
+"En person blir en leder når han eller hun blir satt i en lederposisjon."\\
 
-%" Lederskap begynner med ein formel rolle struktur som definerer gruppe hierakiet av autoritet.(Authority; legitimate power assigned to a particular position.)
+I gruppekontrakten ble det bestemt at vi skulle ha en flatstruktur i gruppen. Valget var basert på at ingen egentlig ville gå inn i en lederrolle, og at vi ville ha en større frihet til å formulere arbeidsoppgavene selv. Vi kom likevel opp i situasjoner som krevde at en person tok ledelse for å sikre effektiviteten til gruppen. I praksis fekk gruppen en situasjonsbetinget lederstruktur. Situsjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter hva funksjon gruppen trenger til en hver tid, der en funksjon er en aksjon som blir satt igang for å sikre effektiviteten i gruppen.\\
 
-I gruppekontrakten blei det bestemt at me skulle ha ein flatstruktur i gruppa. Valget var basert på at ingen egentlig ville gå inn i ein lederrolle, og at me ville ha ein større frihet til å formulere arbeidsoppgåvene sjølv. Me kom likevel opp i situsjoner som krevde at ein person tok ledelse for å sikre effektiviteten til gruppa. \emph{her må vi ha et eksempel} I praksis fekk gruppa ein situasjonsbetinget lederstruktur. Situsjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter kva funksjon gruppa treng til ein kvar tid, der ein funksjon er ein aksjon som blir sett igang for å sikre effektiviteten i gruppa%, og kan vera enten oppgåveretta aksjoner og relasjonsretta/samholdsretta aksjoner. 
+Den situasjonsbetinget lederstrukturen førte og til at gruppemedlemmer tok rollen som leder i den fagdelen de hadde mest autoritet på. Åsmund ble dermed en uformell leder for fysikkdelen, Turid for numerikk delen og Knut for programmeringsdelen i C++. De tok dermed ansvar for fremgangen og oppgavedeling på disse områdene, og strukturerte samarbeidet mellom gruppemedlemmene på sitt respektive felt. \\
 
-Den situasjonsbetinget lederskap strukturen førte og til at gruppemedlemmer tok rollen som leder i den fagdelen dei hadde mest autoritet på. Åsmund blei dermed ein uformell leder for fysikkdelen, Turid for numerikk delen og Knut for programeringsdelen i c++. Dei tok dermed ansvar for framgang og oppgåvedeling på desse områdene, og strukturerte samarbeidet mellom gruppemedlemmene på sitt respektive felt. \\
+I vår gruppe såg vi at Åsmund i større grad gikk inn i rollen som oppgave-leder. Han tok ansvar for å sette opp et system for utveksling av informasjon rundt prosjektet, github, og tok ofte initiativ ved å legge ut relevante artikler på siden. Han gikk dermed og inn i rollen som koordinator (ref) på gruppen. Vi merket oss og at han var mer aktiv i prosjektet i EIT, som er den delen som er mest oppgavefokusert. \\
 
-I vår gruppe såg me at Åsmunde i større grad gjekk inn i rolla som oppgåve-leder. Han tok ansvar for å settje opp eit system for å utveksle informasjon rundt prosjektet, github, og tok ofte intiativ ved å leggje ut relevante artikler på sida. Han gjekk dermed og inn i rolla som  samordneren (ref) på gruppa. Me merka oss og at han var meir aktiv i prosjektet i EIT, som er den delen som er mest oppgåvefokusert. \\
-
-Bales staturer at medlemmer som er veldig oppgåvefokusert er mindre innvolvert i relasjonsretta aksjoner. (ref) Paul er den i gruppa som er mest oppgåvefokusert.På gruppa har han ein tendens til å ta ein faglig tilnærming, og liker å fokusere mest på oppgåva for hand. Han fell alstå oftere inn i rolla som diagnostiker (ref) og informasjonssøkjande (ref). Han er dermed ein styrke på gruppa ved at han held diskusjonene relevante, i tillegg til at han er eit pålitelig medlem når det gjeld å gjennomføre arbeid i tide. Me ser likevel ein tendens til at Paul er mindre involvert i relasjonsretta aksjoner på gruppa. \\
-
-Den som oftas gjekk inn i rolla som sosial-emosionell leder var Turid. Ho var eit viktig ledd i gruppa i form av å uttrykke klare meininger og frustrasjoner over moment i gruppa som ikkje fungerte optimalt. Ho gjekk dermed inn i rolla som kritiker og kjensletolker (ref). Når det var ting som fungerte bra i gruppa kom ho og inn med støtte og oppmuntring til å fortsette på samme linje. Sjølv om ho var ein av dei som oftest var innvolvert i diskusjoner/konflikter, var ho og ofte den som løyste dei, enten gjennom forhandlinger eller ved å trekkje seg tilbake når ho gjekk for langt. Turid var og det medlemmet i gruppa som oftes tok initiativ og ledelse i prossessdelen av EIT, som fokuserer mest på relasjoner og samarbeid mellom medlemmer på gruppa. Her verka ho ofte som målvakt (ref), ved å igangsette runde rundt bordet og være oppmerksom på at alle kom til ordet.
+Bales statuerer at medlemmer som er veldig oppgavefokusert er mindre involvert i relasjonsrettet aksjoner. (ref) Paul er den i gruppen som er mest oppgavefokusert. På gruppa har han en tendens til å ta en faglig tilnærming, og liker å fokusere mest på oppgava for hånd. Han fell altså oftere inn i rollen som diagnostiker (ref) og informasjonssøkeren (ref). Han er dermed en styrke på gruppen ved at han holder diskusjonene relevante, i tillegg til at han er et pålitelig medlem når det gjelder å gjennomføre arbeidet i tide. Vi ser likevel en tendens til at Paul er mindre involvert i relasjonsrettet aksjoner på gruppa. \\
+Den som oftest gikk inn i rollen som sosial-emosjonell leder var Turid. Hun var et viktig ledd i gruppen i form av å uttrykke klare meninger og frustrasjoner over moment i gruppen som ikke fungerte optimalt. Hun gikk dermed inn i rollen som kritiker og følelsetolker (ref). Når det var ting som fungerte bra i gruppen kom hun og inn med støtte og oppmuntring til å fortsette på samme linje. Selv om hun var en av de som oftest var involvert i diskusjoner/konflikter, var hun og ofte den som løste de, enten gjennom forhandlinger eller ved å trekke seg tilbake når hun gikk for langt. Turid var og det medlemmet i gruppen som oftest tok initiativ og ledelse i prosessdelen av EIT, som fokuserer mest på relasjoner og samarbeid mellom medlemmer på gruppen. Her verka hun ofte som målvakt (ref), ved å igangsette runde rundt bordet og være oppmerksom på at alle kom til ordet.
 Situasjon: Paul og Turid.\\
 
-Bale's statuerer og at sosial-emotionell aksjoner ofte blir igangsatt av medlemmer som er mindre involvert i oppgåveretta aksjoner. Dette ser me igjen i gruppa ved at Joakim var innvolvert fleire sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet har havnet noko utenfor hans fagfelt. Han er dermed blitt mindre involvert i sjølve oppgåveløysninga. Derimot har han vore eit viktig tillegg i gruppa når det gjeld det sosiale samhaldet. Han har vore den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppa har blitt betre kjent. Dette har han gjort blant anna ved å alltid stille med ein positiv innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.\\
+Bale's statuerer og at sosial-emosjonelle aksjoner ofte blir igangsatt av medlemmer som er mindre involverte i oppgaveretta aksjoner. Dette ser vi igjen i gruppen ved at Joakim var involvert flere sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet har havnet noe utenfor hans fagfelt. Han er dermed blitt mindre involvert i selve oppgaveløysingen. Derimot har han vært et viktig tillegg i gruppen når det gjelder det sosiale samholdet. Han har vært den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppen har blitt bedre kjent. Dette har han gjort blant annet ved å alltid stille med en positiv innstilling og involvere gruppen i diskusjoner som går på andre ting enn kun det faglige.\\
 
-Det bur ein liten kritikker i samtlige medlemmer på gruppa. Me ser likevel at Knut har tatt på seg denne rolla i gruppa i større grad enn andre. Kritikkaren er viktig i gruppesamanheng ved «systematisk, åpen, støttande og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
-Dette gjøres på ein slik måte at medlemmer på gruppa ikkje opplever kritikken som ein trussel, og dermed beholder fokuset på oppgåveløysning. (Innlegg frå andre).\\
+Det bor en liten kritikker i samtlige medlemmer på gruppen. Vi ser likevel at Knut har tatt på seg denne rollen i gruppen i større grad enn andre. Kritikeren er viktig i gruppesammenheng ved «systematisk, åpen, støttende og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
+Dette gjøres på en slik måte at medlemmer på gruppa ikke opplever kritikken som en trussel, og dermed beholder fokuset på oppgaveløsning. (Innlegg frå andre).\\
 
 ref // (1) Handbok for gruppearbeidet\\
 
