Added von neumann source

--- a/rapport/references.bib
+++ b/rapport/references.bib
@@ -81,3 +81,13 @@ keywords = "Line heat source"
 	year="1988",
 	author="A. D. Brent and V. R. Voller and K. J. Reid"
 }
+@inbook{aarseth,
+	author="Jan Bjarte Aarseth",
+	title="Numeriske Beregningsmetoder",
+	chapter="5.4.4: Von Neumanns generelle stabilitetsbetingelse",
+	pages="208-210",
+	year="2010",
+	school="Norwegian University of Science and Technology"
+}
+	
+	
