Bokmålifisering av teirodelen

--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -35,7 +35,7 @@ prosessrapport som evalueringsform.
 Jeg liker å jobbe etter klare og veldefinerte problemer. Likevel
 er jeg en stor tilhenger av en situasjonsbetinget lederstruktur, hvor gruppen
 tilpasser seg underveis i arbeidet. På den måten, mener jeg, at hvert
-gruppemedlem blir tildelt den rollen som faller han/hun naturlig, der og da. 
+gruppemedlem blir tildelt den rollen som faller han/hun naturlig, der og da.\\ 
 
 Fra før har jeg hatt ett rent prosjektfag, der  gruppen var preget av
 homogenitet, da samtlige var fra samme linje. Det er derfor ekstra spennende og
