--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -6,7 +6,7 @@ chapter{Analyse av gruppearbeidet}
 \section{Kompetanse i praksis}
 
 \section{Kommunikasjon og samspill}
-Det kommunikasjonsnettverket som ble brukt på gruppa vår var åpent nettverk og sirkel nettverk. I et åpent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kommer tydelig fram i diskusjoner på gruppen der det er fri flyt av ideer og meninger. Når en avgjørelse blir tatt på gruppen starter vi ofte med en åpen diskusjon, og utvekslinger av meninger. Før en avgjørelse blir tatt har vi vanligvis hatt en runde rundt bordet der alle får uttrykt sin mening om saken. Dette er en form for sirkel nettverk, der et medlem uttrykker sin mening før han sender ordet videre til sidemannen. Dette er en kommunikasjonsform som har utviklet seg naturlig på gruppen. Særlig i prosessdelen har det falt naturlig å ta en runde rundt bordet for å høre de ulike medlemmenes meninger og følelser. Her er det ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i en rolle som ordstyrer. Etterhvert som gruppen ble bedre kjent var det flere som gikk inn i rollen som ordstyrer, når de følte det var nødvendig. Dette førte til at vi fikk en naturlig styringsprosess ved gruppediskusjoner, uten at vi trengte å skrive en formell regel i gruppekontrakten.
+Det kommunikasjonsnettverket som ble brukt på gruppa vår var åpent nettverk og sirkel nettverk. I et åpent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kommer tydelig fram i diskusjoner på gruppen der det er fri flyt av ideer og meninger. Når en avgjørelse blir tatt på gruppen starter vi ofte med en åpen diskusjon, og utvekslinger av meninger. Før en avgjørelse blir tatt har vi vanligvis hatt en runde rundt bordet der alle får uttrykt sin mening om saken. Dette er en form for sirkel nettverk, der et medlem uttrykker sin mening før han sender ordet videre til sidemannen. Dette er en kommunikasjonsform som har utviklet seg naturlig på gruppen. Særlig i prosessdelen har det falt naturlig å ta en runde rundt bordet for å høre de ulike medlemmenes meninger og følelser. Her er det ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i en rolle som ordstyrer. Etterhvert som gruppen ble bedre kjent var det flere som gikk inn i rollen som ordstyrer, når de følte det var nødvendig. Dette førte til at vi fikk en naturlig styringsprosess ved gruppediskusjoner, uten at vi trengte å skrive en formell regel i gruppekontrakten.\\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Gruppelogg 4:
@@ -14,30 +14,23 @@ Det noteres at gruppedynamikken har blitt ganske god iløpet av disse ukene, og
 debatten rundt problemstilling var frisk og nyansert. Diskusjonene fører til noe
 konkret, og folk er flinke til å myldre og å bygge på andres ideer. Når gruppa
 er enige om at nå skal vi gjøre noe, tar folk personlig initiativ uten at andre
-pusher på.
+pusher på.\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\\
-\\ 
-Det ble tidlig lagt normer som skulle gjelde for kommunikasjon i gruppen. I gruppekontrakten innførte vi kaffemøte om morgenen, for å diskutere framgangen og planlegge dagen videre. (Her åpnet vi og for at folk kunne ta opp ting før vi starta dagen.) Vi var likevel dårlig til å gjennomføre dette tiltaket i starten. Dette førte til at noen av medlemmene satt uten arbeidsoppgaver, og uten oversikt over hva de andre arbeidet med. 
+Det ble tidlig lagt normer som skulle gjelde for kommunikasjon i gruppen. I gruppekontrakten innførte vi kaffemøte om morgenen, for å diskutere framgangen og planlegge dagen videre. (Her åpnet vi og for at folk kunne ta opp ting før vi starta dagen.) Vi var likevel dårlig til å gjennomføre dette tiltaket i starten. Dette førte til at noen av medlemmene satt uten arbeidsoppgaver, og uten oversikt over hva de andre arbeidet med. \\
 Situasjon Joakim:
-Det ble dermed lagt større vekt på gjennomførelsen av kaffemøte, noe som bedret effektiviteten til gruppen ved å sysselsette alle medlemmene og førte til at hvert medlem hadde en større oversikt over hva de andre arbeidet med. I tillegg satt kaffemøte en offisiell start på dagen, og bidrog til et større samhold i gruppen. 
-\\
-\\
-Andre tiltak?
-\\
-\\
-Miljøet og fysiske faktorer kan ha en stor innvirkning på kommunikasjonen i gruppen. Vi har selv merket at kommunikasjonen ofte blir skarpere og mer ampert når vi har jobbet over en lengre og intensiv periode uten pauser. Dette har vi prøvd å gjort noe med ved å være flinkere til å ta pauser. Spesielt når noen merker at andre medlemmer på gruppa begynner å bli slitne og irritable er det viktig at andre tar initiativ til pauser. 
-Rommet vi satt på hadde og dårlig ventilasjon, noe som førte til at gruppemedlemmer fort ble tunge i hodet og slitne. I etterkant ser vi at vi kunne vært mer selektive på lokale vi valgte å jobbe i, siden miljøet har mye å si for trivselen til medlemmene.
-\\
-(Hvordan gruppemedlemmer velger sittearrangementet, kan si mye om dynamikken i gruppen. Vi arrangerte bordet vi satt rundt som et kvadrat. Det var dermed ingen plasser rundt bordet som gav en høyere status til noen av medlemmene, noe som understreker den flate strukturen på gruppen.)
-\\
-\\
-En annen viktig faktor på gruppen som lettet kommunikasjonen på gruppen er bruk av humor. Dette er noe som går igjen i gruppen vår. Helt frå begynnelsen har det vært en lett og god stemning mellom gruppemedlemmene. Dette gjør at vi har en lavere terskel for å uttrykke sterke meninger eller uenigheter. Vi har og en høy grad av selvironi på gruppen. Det at gruppemedlemmer ikke tar seg selv så høytidelige, gjør at det blir lettere å ta opp ikke-tema. Gjennom studier er det og vist at effektiviteten til gruppen øker ved bruk av passende og ofte selvrettet humor. Gjennom bruk av humor på gruppen, har vi blitt tryggere på hverandre, og dermed jobbet sammen mer effektivt. Vi er ikke redde for å tråkke hverandre på ``tærne'', noe som gjør at vi kan være den vi er. 
-\\
-\\
-Aksjoner for å betre gruppekommunikasjonen. Kaffepause, runde rundt bordet osv.!
+Det ble dermed lagt større vekt på gjennomførelsen av kaffemøte, noe som bedret effektiviteten til gruppen ved å sysselsette alle medlemmene og førte til at hvert medlem hadde en større oversikt over hva de andre arbeidet med. I tillegg satt kaffemøte en offisiell start på dagen, og bidrog til et større samhold i gruppen. \\\
+
+Andre tiltak?\\
+
+Miljøet og fysiske faktorer kan ha en stor innvirkning på kommunikasjonen i gruppen. Vi har selv merket at kommunikasjonen ofte blir skarpere og mer ampert når vi har jobbet over en lengre og intensiv periode uten pauser. Dette har vi prøvd å gjort noe med ved å være flinkere til å ta pauser. Spesielt når noen merker at andre medlemmer på gruppa begynner å bli slitne og irritable er det viktig at andre tar initiativ til pauser. Rommet vi satt på hadde og dårlig ventilasjon, noe som førte til at gruppemedlemmer fort ble tunge i hodet og slitne. I etterkant ser vi at vi kunne vært mer selektive på lokale vi valgte å jobbe i, siden miljøet har mye å si for trivselen til medlemmene.
+(Hvordan gruppemedlemmer velger sittearrangementet, kan si mye om dynamikken i gruppen. Vi arrangerte bordet vi satt rundt som et kvadrat. Det var dermed ingen plasser rundt bordet som gav en høyere status til noen av medlemmene, noe som understreker den flate strukturen på gruppen.)\\
+
+En annen viktig faktor på gruppen som lettet kommunikasjonen på gruppen er bruk av humor. Dette er noe som går igjen i gruppen vår. Helt frå begynnelsen har det vært en lett og god stemning mellom gruppemedlemmene. Dette gjør at vi har en lavere terskel for å uttrykke sterke meninger eller uenigheter. Vi har og en høy grad av selvironi på gruppen. Det at gruppemedlemmer ikke tar seg selv så høytidelige, gjør at det blir lettere å ta opp ikke-tema. Gjennom studier er det og vist at effektiviteten til gruppen øker ved bruk av passende og ofte selvrettet humor. Gjennom bruk av humor på gruppen, har vi blitt tryggere på hverandre, og dermed jobbet sammen mer effektivt. Vi er ikke redde for å tråkke hverandre på ``tærne'', noe som gjør at vi kan være den vi er. \\
+
+Aksjoner for å betre gruppekommunikasjonen. Kaffepause, runde rundt bordet osv.!\\
+
 \section{Situasjon gruppelogg 12}
-Vi har hatt framføring av grupperapport og prosessrapport idag. Gruppen er fornøyd med egen innsats, da vi fekk sagt det vi skulle innenfor de rammene som var gitt. I en slik situasjon merker vi og at den tryggheten og innbyrdes tilliten vi har i gruppen er med å bidrar til en større trygghet i framføringen. Det at vi vet vi har tillit frå gruppen gjør at vi tør å improvisere mer i framføringen, noe som gjør framføringen mer levende. Vi merker og at de andre på gruppene følger med på hva en sier når en snakker, og er flinke til å hjelpe en videre dersom en setter seg fast på et ord eller setning. Dette virker som ei ``sikringsline'' som gjør at vi tør å gå litt utenfor våre respektive komfortsoner. Vi klarte og å beholde humoren vi har ellers i gruppen, noe som gir at spenningen blant de gruppemedlemmer som er ukomfortable med å stå foran en mengde blir lavere. ``Humor tends to promote cohesiveness and reduce tension in groups'' (Bloch, Browning \& McGrath 1983).
+Vi har hatt framføring av grupperapport og prosessrapport idag. Gruppen er fornøyd med egen innsats, da vi fekk sagt det vi skulle innenfor de rammene som var gitt. I en slik situasjon merker vi og at den tryggheten og innbyrdes tilliten vi har i gruppen er med å bidrar til en større trygghet i framføringen. Det at vi vet vi har tillit frå gruppen gjør at vi tør å improvisere mer i framføringen, noe som gjør framføringen mer levende. Vi merker og at de andre på gruppene følger med på hva en sier når en snakker, og er flinke til å hjelpe en videre dersom en setter seg fast på et ord eller setning. Dette virker som ei ``sikringsline'' som gjør at vi tør å gå litt utenfor våre respektive komfortsoner. Vi klarte og å beholde humoren vi har ellers i gruppen, noe som gir at spenningen blant de gruppemedlemmer som er ukomfortable med å stå foran en mengde blir lavere. ``Humor tends to promote cohesiveness and reduce tension in groups'' (Bloch, Browning \& McGrath 1983).\\
 %Situasjon: øvelsen med evaluering ``det enkelte teammedlem''
 %Situasjon: legomannen - bruk gruppelogg, men prøv å dra parallell til hvordan vi arbeider generelt.
 
@@ -62,15 +55,15 @@ derfor brukt mye tid på å prøve og nå nettopp det. Etter godt og vel en time
 diskutering skjærte derfor Knut Halvor i gjennom og ba om en
 flertallsavgjørelse. Dette er i henhold til gruppas beslutningsmønster, som sier
 at ved manglende konsensus skal flertallet bestemme. Avstemmingen resulterte i
-at prosessrapporten skulle skrives på bokmål. $\\$
+at prosessrapporten skulle skrives på bokmål. \\
+
 Paul skriver i sin private logg ``selv om jeg var uenig i at rapporten skulle
 skrives på norsk, gjør prosessen rundt avgjørelsen det lettere å takle
 `nederlaget'''. Dette viser bare at Johnson \& Johnson sin teori \cite{jj} om
 hvordan å få ulikheter blant gruppemedlemmene til å styrke gruppen fungerer i
-praksis. $\\$
+praksis. \\
 
 %Situasjon: Rapportering da Joakim var syk
-
 Et annet eksempel på anvendelse av samarbeidskontrakten var da Joakim lå syk, i
 gruppeloggen står det ``Joakim sendte sms til gruppa før oppmøte, han handler
 dermed i tråd med gruppekontrakten som sier; `gi beskjed dersom du ikke kan
