--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -2,7 +2,8 @@
 
 %Kommentarene nedenfor gjelder situasjoner og elementer fra gruppelogg som skal
 %dras inn. I tillegg må det reflekteres, og relevant teori må dras inn
-chapter{Analyse av gruppearbeidet}
+\chapter{Analyse av gruppearbeidet}
+
 \section{Kompetanse i praksis}
 
 \section{Kommunikasjon og samspill}
