Gikk over Turid sin del, se i filen!

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -7,7 +7,7 @@
 \section{Kompetanse i praksis}
 
 \section{Kommunikasjon og samspill}
-Det kommunikasjonsnettverket som ble brukt på gruppa vår var åpent nettverk og sirkel nettverk. I et åpent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kommer tydelig fram i diskusjoner på gruppen der det er fri flyt av ideer og meninger. Når en avgjørelse blir tatt på gruppen starter vi ofte med en åpen diskusjon, og utvekslinger av meninger. Før en avgjørelse blir tatt har vi vanligvis hatt en runde rundt bordet der alle får uttrykt sin mening om saken. Dette er en form for sirkel nettverk, der et medlem uttrykker sin mening før han sender ordet videre til sidemannen. Dette er en kommunikasjonsform som har utviklet seg naturlig på gruppen. Særlig i prosessdelen har det falt naturlig å ta en runde rundt bordet for å høre de ulike medlemmenes meninger og følelser. Her er det ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i en rolle som ordstyrer. Etterhvert som gruppen ble bedre kjent var det flere som gikk inn i rollen som ordstyrer, når de følte det var nødvendig. Dette førte til at vi fikk en naturlig styringsprosess ved gruppediskusjoner, uten at vi trengte å skrive en formell regel i gruppekontrakten.\\
+Det kommunikasjonsnettverket som ble brukt på gruppa vår var åpent nettverk og sirkelnettverk. I et åpent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kommer tydelig fram i diskusjoner på gruppen der det er fri flyt av ideer og meninger. Når en avgjørelse blir tatt på gruppen starter vi ofte med en åpen diskusjon, og utvekslinger av meninger. Før en avgjørelse blir tatt har vi vanligvis hatt en runde rundt bordet der alle får uttrykt sin mening om saken. Dette er en form for sirkel nettverk, der et medlem uttrykker sin mening før han sender ordet videre til sidemannen. Dette er en kommunikasjonsform som har utviklet seg naturlig på gruppen. Særlig i prosessdelen har det falt naturlig å ta en runde rundt bordet for å høre de ulike medlemmenes meninger og følelser. Her er det ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i en rolle som ordstyrer. Etterhvert som gruppen ble bedre kjent var det flere som gikk inn i rollen som ordstyrer, når de følte det var nødvendig. Dette førte til at vi fikk en naturlig styringsprosess ved gruppediskusjoner, uten at vi trengte å skrive en formell regel i gruppekontrakten.\\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Gruppelogg 4:
@@ -23,10 +23,25 @@ Det ble dermed lagt større vekt på gjennomførelsen av kaffemøte, noe som bed
 
 Andre tiltak?\\
 
-Miljøet og fysiske faktorer kan ha en stor innvirkning på kommunikasjonen i gruppen. Vi har selv merket at kommunikasjonen ofte blir skarpere og mer ampert når vi har jobbet over en lengre og intensiv periode uten pauser. Dette har vi prøvd å gjort noe med ved å være flinkere til å ta pauser. Spesielt når noen merker at andre medlemmer på gruppa begynner å bli slitne og irritable er det viktig at andre tar initiativ til pauser. Rommet vi satt på hadde og dårlig ventilasjon, noe som førte til at gruppemedlemmer fort ble tunge i hodet og slitne. I etterkant ser vi at vi kunne vært mer selektive på lokale vi valgte å jobbe i, siden miljøet har mye å si for trivselen til medlemmene.
+Miljøet og fysiske faktorer kan ha en stor innvirkning på kommunikasjonen i
+gruppen. Vi har selv merket at kommunikasjonen ofte blir skarpere og mer amper
+når vi har jobbet over en lengre og intensiv periode uten pauser. Dette har vi
+prøvd å gjort noe med ved å være flinkere til å ta pauser. Spesielt når noen
+merker at andre medlemmer på gruppa begynner å bli slitne og irritable er det
+viktig at andre tar initiativ til pauser. Rommet vi satt på hadde i tillegg dårlig ventilasjon, noe som førte til at gruppemedlemmer fort ble tunge i hodet og slitne. I etterkant ser vi at vi kunne vært mer selektive på lokale vi valgte å jobbe i, siden miljøet har mye å si for trivselen til medlemmene.
 (Hvordan gruppemedlemmer velger sittearrangementet, kan si mye om dynamikken i gruppen. Vi arrangerte bordet vi satt rundt som et kvadrat. Det var dermed ingen plasser rundt bordet som gav en høyere status til noen av medlemmene, noe som understreker den flate strukturen på gruppen.)\\
 
-En annen viktig faktor på gruppen som lettet kommunikasjonen på gruppen er bruk av humor. Dette er noe som går igjen i gruppen vår. Helt frå begynnelsen har det vært en lett og god stemning mellom gruppemedlemmene. Dette gjør at vi har en lavere terskel for å uttrykke sterke meninger eller uenigheter. Vi har og en høy grad av selvironi på gruppen. Det at gruppemedlemmer ikke tar seg selv så høytidelige, gjør at det blir lettere å ta opp ikke-tema. Gjennom studier er det og vist at effektiviteten til gruppen øker ved bruk av passende og ofte selvrettet humor. Gjennom bruk av humor på gruppen, har vi blitt tryggere på hverandre, og dermed jobbet sammen mer effektivt. Vi er ikke redde for å tråkke hverandre på ``tærne'', noe som gjør at vi kan være den vi er. \\
+En annen faktor som letter kommunikasjonen på gruppa var bruk av humor. Dette er
+noe som går igjen i gruppen vår. Helt fra begynnelsen har det vært en lett og
+god stemning mellom gruppemedlemmene. Dette gjør at vi har en lavere terskel for
+å uttrykke sterke meninger eller uenigheter. Vi har og en høy grad av selvironi
+på gruppen. Det at gruppemedlemmer ikke tar seg selv så høytidelige, gjør at det
+blir lettere å ta opp ikke-tema. Gjennom studier \emph{(referanser her)} er det
+vist at gruppeeffektivitet øker ved bruk av passende og ofte selvrettet humor.
+Gjennom bruk av humor på gruppen, har vi blitt tryggere på hverandre, og dermed
+jobbet sammen mer effektivt. Vi er ikke redde for å tråkke hverandre på
+``tærne'', noe som gjør at vi kan være den vi er. \emph{Forslag til eksempel
+her; Turid vs. Joakim ang. Crank.} \\
 
 Aksjoner for å betre gruppekommunikasjonen. Kaffepause, runde rundt bordet osv.!\\
 
