fikset mongo ligaturer fra texmaker

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -58,15 +58,15 @@ Vi var likevel dårlig til å gjennomføre dette tiltaket i starten. Dette ført
 
 I gruppelogg dag 6 skriv gruppen;
 På grunn av presentasjonen av faglitteratur, samt oppgavepresentering fra en gruppe,
-idag tidlig, mistet vi vårt morgenmøte. Vi ﬁkk derfor ikke tildelt arbeidsoppgaver på                                                         
+idag tidlig, mistet vi vårt morgenmøte. Vi fikk derfor ikke tildelt arbeidsoppgaver på                                                         
 en god måte, og starten ble litt “ﬂytende”. Turid og Paul satte igang med diskretisering
 av sine differensialligninger, Åsmund jobbet med kurvetilpasning og Knut samarbeidet
 med Turid og Paul om anvendelighet opp mot programmering. Joakim følte seg da litt
-tilsidesatt fordi han ikke hadde fått tildelt noen spesiﬁkk arbeidsoppgave. Det har derfor
+tilsidesatt fordi han ikke hadde fått tildelt noen spesifikk arbeidsoppgave. Det har derfor
 blitt besluttet at arbeidsoppgaver skal avklares før noen setter i gang, slik at vi unngår at                                           
-enkeltpersoner skal føle seg overﬂødig. Et positivt aspekt ved denne situasjonen var at
+enkeltpersoner skal føle seg overflødig. Et positivt aspekt ved denne situasjonen var at
 gruppetryggheten er så pass at Joakim kunne si hva han følte, og at gruppen da hjalp til
-med å ﬁnne en relevant arbeidsoppgave. Etter denne hendelsen ble det dermed lagt større vekt 
+med å finne en relevant arbeidsoppgave. Etter denne hendelsen ble det dermed lagt større vekt 
 på gjennomførelsen av kaffemøtet. Dette bedret effektiviteten til gruppen ved å sysselsette 
 alle medlemmene og førte til at hvert medlem hadde en større oversikt over hva de andre arbeidet
 med. I tillegg satt kaffemøte en offisiell start på dagen, og bidrog til et større samhold i gruppen. \\\
