--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -59,7 +59,7 @@ Vi var likevel dårlig til å gjennomføre dette tiltaket i starten. Dette ført
 I gruppelogg dag 6 skriv gruppen;
 På grunn av presentasjonen av faglitteratur, samt oppgavepresentering fra en gruppe,
 idag tidlig, mistet vi vårt morgenmøte. Vi fikk derfor ikke tildelt arbeidsoppgaver på                                                         
-en god måte, og starten ble litt “ﬂytende”. Turid og Paul satte igang med diskretisering
+en god måte, og starten ble litt ``flytende''. Turid og Paul satte igang med diskretisering
 av sine differensialligninger, Åsmund jobbet med kurvetilpasning og Knut samarbeidet
 med Turid og Paul om anvendelighet opp mot programmering. Joakim følte seg da litt
 tilsidesatt fordi han ikke hadde fått tildelt noen spesifikk arbeidsoppgave. Det har derfor
