--- a/rapport/appendixa.tex
+++ b/rapport/appendixa.tex
@@ -35,7 +35,7 @@
 
 \section{Script to make movie of plots using ffmpeg}
 
-\lstinputlisting[language=bash]{../program/build/movie.sh}
+\lstinputlisting[language=bash]{../program/build/animate.sh}
 
 \section{Makefile}
 
